--- a/abstract.tex
+++ b/abstract.tex
@@ -1,37 +1,4 @@
 % 
-This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh; and for completeness, we also consider the contribution of parts of other neighboring seismic zones that fall within our region of interest.
-% For completeness, we also consider the partial contribution of the seismic zones of Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. 
-In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are calculated for each seismic zone separately, and for comparison purposes we also consider the combination of all zones into a single seismotectonic region. Seismic hazard curves are obtained for two 
-% distinct 
-models defined based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, depending on the type of construction, 
- % for unreinforced and reinforced structures, respectively. We 
-and also obtain results for a combined scenario using these two models. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
+This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh; and for completeness, we also consider the contribution of parts of other neighboring seismic zones that fall within our region of interest. In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are calculated for each seismic zone separately, and for comparison purposes we also consider the combination of all zones into a single seismotectonic region. Seismic hazard curves are obtained for two models defined based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, depending on the type of construction. We 
+also obtain results for a combined scenario using these two models. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
 
-% *********************************************************************************************************************
-% *********************************************************************************************************************
-
-% Smoothing was done using a Gaussian filter in incremental intervals of magnitude. 
-
-% greater than 4.5 for unreinforced and informal construction buildings, and greater than 5.0 for modern structures following design regulations
-
-% Naeem's comment about differences with previous studies...
-
-% We may need to write the conclusion from other point of view. The method, attenuation relationship, and even data (some sort of) are different from other studies. So we expect to see different results. Not only we expect but at some point we should see some differences because of the method. There are some places that we don't have any recorded earthquake or they are not  as much to increase the hazard. In this study for those places we get lower hazard, but in studies based on recognizing faults as a source, they ends up with higher hazard. I think we can say that even though the other studies are good, but they are not complete and we need to use this method alongside them.
-
-% Naeem's comment about GMPE...
-
-% The attenuation relationship \citep{Kalkan2004} has been introduced in 2004 (Not recently). In 2014, \citet{Zafarani2014} evaluated many different attenuation relationship based on recently recorded data. They found \citet{Kalkan2004} has the best fit with data for PGA.
-
-% Naeem's info about magnitude selection...
-
-% We used earthquake with magnitude 3 and greater only after 2000, before that data are greater than 4.
-
-
-% *********************************************************************************************************************
-% *********************************************************************************************************************
-
-
-% Naeem's original abstract
-% -------------------------
-
-% In this study we conduct a new probabilistic seismic hazard assessment for northern Iran, using recently confirmed ground motion prediction equations and updated seismic catalogs. We evaluate seismic hazard over whole three tectonic seismic zones (Alborz Mountain Range, Azerbaijan and Kopeh-Dagh) and part of two tectonic seismic zones (Zagros and Central-East Iran) using smoothed seismicity. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, spatially gridded to cells. We decluster historical and instrumental seismicity to compute the rate of earthquakes in each grid, and smooth these rates to account for uncertainty in the spatial distribution of future earthquakes. We assume each grid cell has spacing of $0.1^{\circ}$ in latitude and $0.1^{\circ}$ in longitude and count the number of earthquakes in each of them. We use Gaussian filter to smooth the fraction of earthquakes in incremental intervals of magnitude. For this article, in order to consider the seismicity rate, we consider all historical and instrumental earthquakes with magnitude above 3. To calculate the seismic hazard we defined two models based on structural damage threshold magnitude, including Mw 4.5 and Mw 5. Seismicity parameters are calculated for each seismic region, and smoothed seismicity is calculated separately for each. We also consider the combination of regions as a uniform region.  We add the probability of exceedance of all regions and present the smoothed seismicity hazard in northern Iran. The horizontal peak ground acceleration is selected as the ground motion parameter. The results are assessed in terms of the expected peak ground acceleration (PGA) with a 10\% and 2\% probability of exceedance in 50 years for rock site conditions. The seismic hazard map for northern Iran is presented. 
