--- a/introduction.tex
+++ b/introduction.tex
@@ -1,19 +1,19 @@
 
 \section{Introduction}
 
-This article presents a new seismic hazard assessment for northern portion of the Iranian plateau, using a smoothed seismicity approach in combination with an updated seismic catalog and a ground motion prediction equation recently evaluated and found to be the most reliable attenuation relationship to predict peak ground response in the region. 
+This article presents a new seismic hazard assessment for the northern portion of the Iranian plateau, using a smoothed seismicity approach in combination with an updated seismic catalog and a ground motion prediction equation recently evaluated and found to be the most reliable attenuation relationship to predict peak ground response in the region. 
 
 The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confined between the convergent movements of the Arabian and Eurasian plates, and laterally trapped between the Arabian and eastern Asia-Minor to the west, and the Indian and Eurasian plates to the east \citep{Berberian_1981_Chap}. This entrapment lifts the plateau and gives rise to the three major mountain ranges delimiting Iran's land, the Zagros mountain ranges running from the southeast to the northwest, the Alborz ranges to the north, and the east Iranian ranges. It also defines the seismic activity of the region---one with a long history of large magnitude ($M>7$) earthquakes that are well documented dating back to the eight century---which has repeatedly damaged Iran's infrastructure and taken the lives of thousands. 
 
-According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the more elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted studies divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic basic seismic zones and focus our attention on those most relevant to the northern part of the country, that is, Azerbaijan, Alborz and Kopeh-Dagh.
+According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the more elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted models divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic seismic zones and focus our attention on those most relevant to the northern part of the country, Azerbaijan, Alborz and Kopeh-Dagh.
 
-Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE}. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. While improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are necessary.
+Over the last three decades there have been multiple efforts to better estimate the seismic parameters and hazard, and improve the assessment of seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. The most recent of these studies \citep{Khodaverdian_2016_BSSA} focuses in the estimation of spatially-variable seismic parameters for the whole country using a similar approach to the one we used here. We, however, focus our attention in the northern three seismic zones of the country assuming regionally-based seismic parameters. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. However, other indicators suggest persistent high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are still deemed necessary.
 
-Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered the devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard in the region \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between different studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
+Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
 
-However useful, most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to the availability data. Here, we use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Boyd2008, Kalkan2009, Moschetti2014}. Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh; but for completeness, we also consider the partial contribution of the areas of Zagros and the central-east seismic zones within our domain of interest (see Fig.~\ref{fig:iran}). In addition, for comparison purposes, we obtain results for the the combination of all seismic zones as a uniform region.
+Most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to data availability. We use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Boyd2008, Kalkan2009, Moschetti2014}, including Iran \citep{Khodaverdian_2016_BSSA}. Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh; but for completeness, we also consider the partial contribution of the areas of Zagros and the central-east seismic zones within our domain of interest (see Fig.~\ref{fig:iran}). In addition, for comparison purposes, we obtain results for the the combination of all seismic zones as a uniform region.
 
-In the following sections we describe in greater detail our region of interest, review the associated tectonics and seismicity, and provide additional information about the approach followed to estimate seismic hazard for the region. Significant aspects of our work include the composition of the earthquake catalog, including catalog completeness, the conversion of earthquake magnitudes, the selection of an appropriate attenuation relationship for the region \citep{Zafarani2014, Kalkan2004}, and the estimation of the Gutenberg-Richter seismicity parameters, which are necessary for the smoothed seismicity method. Our analysis includes seismic hazard curves and maps for peak ground acceleration considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We consider two hazard models based on the assumption that damage occurs above an earthquake magnitude $M_w$ 4.5 for informal construction buildings, and above $M_w$ 5.0 for structures built in accordance to code regulations. The results of these two models are then combined into a single analysis based on the composition of the structural building inventory of the country. We compare our results to equivalent estimations (hazard curves) available in the literature for selected locations and conclude with a discussion in light of other previous hazard studies.
+In the following sections we describe in greater detail our region of interest, review the associated tectonics and seismicity, and provide additional information about the adopted approach. Significant aspects of our work include the composition of the earthquake catalog, including catalog completeness, the conversion of earthquake magnitudes, the selection of an appropriate attenuation relationship for the region \citep{Zafarani2014, Kalkan2004}, and the estimation of the Gutenberg-Richter seismicity parameters. Our analysis includes seismic hazard curves and maps for peak ground acceleration considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions, considering different magnitude thresholds. We compare our results to equivalent estimations (hazard curves) available in the literature for selected locations and conclude with a discussion in light of other previous hazard studies.
 
 
 % *********************************************************************************************************************
