--- a/references.bib
+++ b/references.bib
@@ -3,7 +3,7 @@
 
 
 @Article{Abdi2013,
-  Title                    = {Ground-motion scenarios consistent with PSH deaggregation for Tehran, capital city of Iran},
+  Title                    = {Ground-motion scenarios consistent with {PSH} deaggregation for {T}ehran, capital city of {I}ran},
   Author                   = {Abdi, F and Mirzaei, N and Shabani, E},
   Journal                  = {Natural Hazards and Earth System Science},
   Year                     = {2013},
@@ -11,9 +11,8 @@
   Pages                    = {679--688},
   Volume                   = {13},
 
-  Owner                    = {naeem},
-  Publisher                = {Copernicus GmbH},
-  Timestamp                = {2016.01.23}
+  Doi                      = {10.5194/nhess-13-679-2013},
+  Publisher                = {Copernicus GmbH}
 }
 
 @Article{Abdollahzadeh2014,
@@ -31,7 +30,7 @@
 }
 
 @Article{Abdollahzadeh2014a,
-  Title                    = {Considering potential seismic sources in earthquake hazard assessment for Northern Iran},
+  Title                    = {Considering potential seismic sources in earthquake hazard assessment for Northern {I}ran},
   Author                   = {Abdollahzadeh, Gholamreza and Sazjini, Mohammad and Shahaky, Mohsen and Tajrishi, Fatemeh Zahedi and Khanmohammadi, Leila},
   Journal                  = {Journal of seismology},
   Year                     = {2014},
@@ -39,9 +38,8 @@
   Pages                    = {357--369},
   Volume                   = {18},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.23}
+  Doi                      = {10.1007/s10950-013-9412-1},
+  Publisher                = {Springer}
 }
 
 @Article{Ahmadi2013,
@@ -70,14 +68,11 @@
 @Article{Akinci2004,
   Title                    = {Seismic hazard estimate in the {A}lps and {A}pennines ({I}taly) using smoothed historical seismicity and regionalized predictive ground-motion relationships},
   Author                   = {Akinci, A and Mueller, C and Malagnini, L and Lombardi, AM},
-  Journal                  = {Boll. Geofis. Teor. Appl},
+  Journal                  = {Bollettino di Geofisica Teorica ed Applicata},
   Year                     = {2004},
   Number                   = {4},
   Pages                    = {285--304},
-  Volume                   = {45},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Volume                   = {45}
 }
 
 @Article{Akkar2010,
@@ -94,41 +89,30 @@
   Timestamp                = {2015.07.15}
 }
 
-@Article{Alavi1991,
-  Title                    = {Tectonic map of the middle east. Geological Survey of Iran},
-  Author                   = {Alavi, M},
-  Journal                  = {scale},
+@TechReport{Alavi1991,
+  Title                    = {Tectonic map of the {M}iddle {E}ast, scale 1:5,000,000},
+  Author                   = {Alavi, M.},
+  Institution              = {Geological Survey of Iran},
   Year                     = {1991},
-  Number                   = {5,000,000},
-  Pages                    = {1},
-  Volume                   = {1},
 
   __markedentry            = {[naeem:]},
-  Owner                    = {naeem},
-  Timestamp                = {2016.01.25}
+  Journal                  = {Geological Survey of Iran}
 }
 
 @Book{Ambraseys2005,
   Title                    = {A history of {P}ersian earthquakes},
   Author                   = {Ambraseys, Nicholas Nicholas and Melville, Charles Peter},
-  Publisher                = {Cambridge university press},
-  Year                     = {2005},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Publisher                = {Cambridge University Press},
+  Year                     = {2005}
 }
 
-@Article{Baker2008,
-  Title                    = {An introduction to probabilistic seismic hazard analysis (PSHA)},
+@Book{Baker2008,
+  Title                    = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
   Author                   = {Baker, Jack W},
-  Journal                  = {White paper, version},
   Year                     = {2008},
-  Pages                    = {72},
-  Volume                   = {1},
+  Note                     = {Version 1.3, 72pp},
 
-  __markedentry            = {[naeem:6]},
-  Owner                    = {naeem},
-  Timestamp                = {2016.01.25}
+  __markedentry            = {[naeem:6]}
 }
 
 @Article{Barani2007,
@@ -136,13 +120,12 @@
   Author                   = {Barani, Simone and Spallarossa, Daniele and Bazzurro, Paolo and Eva, Claudio},
   Journal                  = {Tectonophysics},
   Year                     = {2007},
-  Number                   = {1},
+  Number                   = {1--4},
   Pages                    = {13--35},
   Volume                   = {435},
 
-  Owner                    = {naeem},
-  Publisher                = {Elsevier},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1016/j.tecto.2007.02.008},
+  Publisher                = {Elsevier}
 }
 
 @Article{Bender1983,
@@ -160,13 +143,22 @@
 }
 
 @TechReport{Bender1982,
-  Title                    = {SEISRISK II; a computer program for seismic hazard estimation},
+  Title                    = {{SEISRISK II; A} computer program for seismic hazard estimation},
   Author                   = {Bender, Bernice and Perkins, David M},
-  Institution              = {US Geological Survey,},
+  Institution              = {U.S.~Geological Survey},
   Year                     = {1982},
+  Number                   = {Open File 82-293}
+}
 
-  Owner                    = {naeem},
-  Timestamp                = {2016.01.23}
+@InCollection{Berberian1997,
+  Title                    = {Seismic sources of the {T}ranscaucasian historical earthquakes},
+  Author                   = {Berberian, MANUEL},
+  Booktitle                = {Historical and prehistorical earthquakes in the {C}aucasus, NATO ASI Series, 2, Environment},
+  Publisher                = {Kluwer Academic Publishing, Dordrecht, Netherlands},
+  Year                     = {1997},
+  Editor                   = {Giardini, D. and Balassanian, S.},
+  Pages                    = {233--311},
+  Volume                   = {28}
 }
 
 @InCollection{Berberian_1981_Chap,
@@ -176,23 +168,10 @@
   Publisher                = {American Geophysical Union},
   Year                     = {1981},
 
-  Address                  = {Washington, D. C.},
-  Editor                   = {Gupta, H. K. and  Delany, F. M.},
+  Address                  = {Washington, D.~C.},
+  Editor                   = {Gupta, H. K. and Delany, F. M.},
 
   Doi                      = {10.1029/GD003p0033}
-}
-
-@Article{Berberian1997,
-  Title                    = {Seismic sources of the {T}ranscaucasian historical earthquakes},
-  Author                   = {Berberian, MANUEL},
-  Journal                  = {Historical and prehistorical earthquakes in the Caucasus},
-  Year                     = {1997},
-  Pages                    = {233--311},
-  Volume                   = {2},
-
-  Owner                    = {naeem},
-  Publisher                = {NATO ASI Series},
-  Timestamp                = {2015.07.15}
 }
 
 @Book{Berberian1994,
@@ -208,14 +187,10 @@
 @Article{Berberian1976,
   Title                    = {On the evidence of the youngest activity of the {N}orth {T}abriz {F}ault and the seismicity of {T}abriz city},
   Author                   = {Berberian, M and Arshadi, S},
-  Journal                  = {Geol. Surv. Iran Rep},
+  Journal                  = {Geol.~Surv.~Iran},
   Year                     = {1976},
   Pages                    = {397--418},
-  Volume                   = {39},
-
-  Owner                    = {naeem},
-  Publisher                = {Citeseer},
-  Timestamp                = {2015.07.15}
+  Volume                   = {39}
 }
 
 @Article{Berberian2001,
@@ -227,9 +202,7 @@
   Pages                    = {563--584},
   Volume                   = {23},
 
-  Owner                    = {naeem},
-  Publisher                = {Elsevier},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1016/S0191-8141(00)00115-2}
 }
 
 @Article{Berberian1999,
@@ -239,26 +212,20 @@
   Year                     = {1999},
   Number                   = {1},
   Pages                    = {120--139},
-  Volume                   = {89},
-
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Volume                   = {89}
 }
 
-@Standard{BHRC2014,
-  Title                    = {Iranian code of practice for seismic resistant design of buildings standard {N}o. 2800},
-  Organization             = {Building \& Housing Research Center, $4^{th}$ revision, Tehran, Iran.},
-  Author                   = {BHRC},
-  Revision                 = {4},
-  Year                     = {2014},
+@Manual{BHRC2014,
+  Title                    = {Iranian code of practice for seismic resistant design of buildings (Standard {N}o. 2800)},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.16}
+  Address                  = {Tehran, Iran},
+  Author                   = {BHRC},
+  Organization             = {Ministry of Housing and Urban Development, and Building \& Housing Research Center, 4th revision},
+  Year                     = {2014}
 }
 
 @Article{Boore2008,
-  Title                    = {Ground-motion prediction equations for the average horizontal component of PGA, PGV, and 5\%-damped PSA at spectral periods between 0.01 s and 10.0 s},
+  Title                    = {Ground-motion prediction equations for the average horizontal component of {PGA}, {PGV}, and 5\%-damped {PSA} at spectral periods between 0.01 s and 10.0 s},
   Author                   = {Boore, David M and Atkinson, Gail M},
   Journal                  = {Earthquake Spectra},
   Year                     = {2008},
@@ -266,12 +233,11 @@
   Pages                    = {99--138},
   Volume                   = {24},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.08.24}
+  Doi                      = {10.1193/1.2830434}
 }
 
 @Article{Boostan2015,
-  Title                    = {Fuzzy—probabilistic seismic hazard assessment, case study: Tehran region, Iran},
+  Title                    = {Fuzzy---probabilistic seismic hazard assessment, case study: {T}ehran region, {I}ran},
   Author                   = {Boostan, Elham and Tahernia, Nadia and Shafiee, Ali},
   Journal                  = {Natural Hazards},
   Year                     = {2015},
@@ -279,25 +245,26 @@
   Pages                    = {525--541},
   Volume                   = {77},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.23}
+  Doi                      = {10.1007/s11069-014-1537-1},
+  Publisher                = {Springer}
 }
 
-@Article{Boyd2008,
+@InCollection{Boyd2008,
   Title                    = {Toward a time-dependent probabilistic seismic hazard analysis for {A}laska},
   Author                   = {Boyd, Oliver S and Zeng, Yuehua and Bufe, Charles G and Wesson, Robert L and Pollitz, Fred and Hardebeck, Jeanne L},
-  Journal                  = {Active Tectonics and Seismic Potential of Alaska},
+  Booktitle                = {Active Tectonics and Seismic Potential of Alaska},
+  Publisher                = {American Geophysical Union},
   Year                     = {2008},
+
+  Address                  = {Washington, D.~C.},
+  Editor                   = {Freymueller, Jeffrey T. and Haeussler, Peter J. and Wesson, Robert L. and Ekstr\"{o}m, G\"{o}ran},
   Pages                    = {399--416},
 
-  Owner                    = {naeem},
-  Publisher                = {American Geophysical Union},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1029/179GM23}
 }
 
 @Article{Cao1996,
-  Title                    = {Seismic hazard estimate from background seismicity in {S}outhern {C}alifornia},
+  Title                    = {Seismic hazard estimate from background seismicity in southern {C}alifornia},
   Author                   = {Cao, Tianqing and Petersen, Mark D and Reichle, Michael S},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1996},
@@ -305,9 +272,7 @@
   Pages                    = {1372--1381},
   Volume                   = {86},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Castellaro2006,
@@ -319,13 +284,14 @@
   Pages                    = {913--930},
   Volume                   = {165},
 
+  Doi                      = {10.1111/j.1365-246X.2006.02955.x},
   Owner                    = {naeem},
   Publisher                = {Oxford University Press},
   Timestamp                = {2016.01.10}
 }
 
 @Article{Chiou2008,
-  Title                    = {An NGA model for the average horizontal component of peak ground motion and response spectra},
+  Title                    = {An {NGA} model for the average horizontal component of peak ground motion and response spectra},
   Author                   = {Chiou, BrianS-J and Youngs, Robert R},
   Journal                  = {Earthquake Spectra},
   Year                     = {2008},
@@ -333,8 +299,7 @@
   Pages                    = {173--215},
   Volume                   = {24},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.08.24}
+  Doi                      = {10.1193/1.2894832}
 }
 
 @Article{Cornell1968,
@@ -352,17 +317,16 @@
 }
 
 @Article{Deniz2010,
-  Title                    = {Magnitude conversion problem for the Turkish earthquake data},
+  Title                    = {Magnitude conversion problem for the {T}urkish earthquake data},
   Author                   = {Deniz, Aykut and Yucemen, M Semih},
-  Journal                  = {Natural hazards},
+  Journal                  = {Natural Hazards},
   Year                     = {2010},
   Number                   = {2},
   Pages                    = {333--352},
   Volume                   = {55},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.10}
+  Doi                      = {10.1007/s11069-010-9531-8},
+  Publisher                = {Springer}
 }
 
 @Book{Douglas2011,
@@ -373,6 +337,18 @@
 
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
+}
+
+@Article{Escordilis_2006_JS,
+  Title                    = {Empirical Global Relations Converting {{\textbf{M}}${}_{\mathrm{S}}$} and {\textbf{m}${}_{\mathrm{b}}$} to Moment Magnitude},
+  Author                   = {Escordilis, E. M.},
+  Journal                  = {Journal of Seismology},
+  Year                     = {2006},
+  Number                   = {2},
+  Pages                    = {225--236},
+  Volume                   = {10},
+
+  Doi                      = {10.1007/s10950-006-9012-4}
 }
 
 @Standard{FEMA2003,
@@ -386,17 +362,15 @@
 }
 
 @Article{Foteva2006,
-  Title                    = {SPATIALLY-SMOOTHED SEISMICITY MODELLING OF SEISMIC HAZARD IN THE {S}OFIA AREA},
+  Title                    = {Spatially-smoothed seismicity modelling of seismic hazard in the {S}ofia area},
   Author                   = {Foteva, Galina and Ilieva, Minka and Botev, EMIL},
-  Journal                  = {71-82 [2007-06-12]. http://www, phys. uni-sofia, bg/annual/arch/99/full/99-09-full, pdf},
+  Journal                  = {Annuaire de l'Universit\'{e} de Sofia, ``St. Kliment Ohridski'', Facult\'{e} de Physique},
   Year                     = {2006},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.16}
+  Volume                   = {99}
 }
 
 @Article{Frankel1995,
-  Title                    = {Mapping seismic hazard in the {C}entral and {E}astern {U}nited {S}tates},
+  Title                    = {Mapping seismic hazard in the central and eastern {U}nited {S}tates},
   Author                   = {Frankel, Arthur},
   Journal                  = {Seismological Research Letters},
   Year                     = {1995},
@@ -404,22 +378,18 @@
   Pages                    = {8--21},
   Volume                   = {66},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1785/gssrl.66.4.8},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Gardner1974,
   Title                    = {Is the sequence of earthquakes in {S}outhern {C}alifornia, with aftershocks removed, {P}oissonian},
   Author                   = {Gardner, JK and Knopoff, L},
-  Journal                  = {Bull. Seismol. Soc. Am},
+  Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1974},
   Number                   = {5},
   Pages                    = {1363--1367},
-  Volume                   = {64},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Volume                   = {64}
 }
 
 @Article{Chafory-Ashtiany_1999_DPM,
@@ -437,8 +407,10 @@
 @InProceedings{Ghodrati2008,
   Title                    = {Seismic Hazard Assessment of {G}ilan Province Including {M}anjil in {I}ran},
   Author                   = {Ghodrati Amiri, G and Amrei, SA Razavian},
-  Booktitle                = {Proc. 14th World Conf. Earthquake Eng},
+  Booktitle                = {Proceedings of the 14th World Conference on Earthquake Engineering},
   Year                     = {2008},
+
+  Address                  = {October 12-17, Beijing, China},
 
   Owner                    = {naeem},
   Timestamp                = {2015.07.18}
@@ -472,10 +444,7 @@
   Year                     = {2013},
   Number                   = {2},
   Pages                    = {10--23},
-  Volume                   = {1},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Volume                   = {1}
 }
 
 @Article{Ghodrati2003,
@@ -483,13 +452,12 @@
   Author                   = {Ghodrati Amiri, G and Motamed, R and Es-Haghi, H Rabet},
   Journal                  = {Journal of Earthquake Engineering},
   Year                     = {2003},
-  Number                   = {03},
+  Number                   = {3},
   Pages                    = {347--372},
   Volume                   = {7},
 
-  Owner                    = {naeem},
-  Publisher                = {World Scientific},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1142/S136324690300119X},
+  Publisher                = {World Scientific}
 }
 
 @Article{Ghodrati2011,
@@ -506,17 +474,16 @@
 }
 
 @Article{Golara2014,
-  Title                    = {Probabilistic seismic hazard analysis of interconnected infrastructure: a case of Iranian high-pressure gas supply system},
+  Title                    = {Probabilistic seismic hazard analysis of interconnected infrastructure: {A} case of {I}ranian high-pressure gas supply system},
   Author                   = {Golara, A},
-  Journal                  = {Natural hazards},
+  Journal                  = {Natural Hazards},
   Year                     = {2014},
   Number                   = {2},
   Pages                    = {567--577},
   Volume                   = {73},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.23}
+  Doi                      = {10.1007/s11069-014-1087-6},
+  Publisher                = {Springer}
 }
 
 @Article{Gutenberg1944,
@@ -533,18 +500,13 @@
   Timestamp                = {2016.01.10}
 }
 
-@Article{Hamdache,
-  Title                    = {Spectral Accelerations and Uniform Hazard Spectra in {N}orthern {A}lgeria, using spatially-smoothed seismicity.},
-  Author                   = {Hamdache, Mohamed and Montilla, Jos{\'e} A Pel{\'a}ez and Casado, Carlos L{\'o}pez},
+@InProceedings{hamdache2008,
+  Title                    = {Spectral Accelerations and Uniform Hazard Spectra in Northern {A}lgeria, using spatially-smoothed seismicity},
+  Author                   = {Hamdache, Mohamed and Pel\'{a}ez Montilla, Jos\'{e} A. and L\'{o}pez Casado, Carlos},
+  Booktitle                = {Proceedings of the 4th International Conference of Earthquake Engineering and Seismology},
+  Year                     = {2003},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
-}
-
-@Article{hamdache2008,
-  Title                    = {Spectral Accelerations and Uniform Hazard Spectra in {N}orthern {A}lgeria, using spatially-smoothed seismicity.},
-  Author                   = {Hamdache, Mohamed and Montilla, Jos{\'e} A Pel{\'a}ez and Casado, Carlos L{\'o}pez},
-  Year                     = {2008}
+  Address                  = {May 12--14, Tehran, Iran}
 }
 
 @Article{Herrmann1977,
@@ -552,11 +514,8 @@
   Author                   = {Herrmann, R.B.},
   Journal                  = {Earthquake Notes},
   Year                     = {1977},
-  Pages                    = {47-49},
-  Volume                   = {88},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.18}
+  Pages                    = {47--49},
+  Volume                   = {88}
 }
 
 @Electronic{IIEES,
@@ -570,14 +529,13 @@
 }
 
 @Book{Jones1834,
-  Title                    = {An Account of the Transactions of {H}is {M}ajesty's {M}ission to the {C}ourt of {P}ersia: In the Years 1807-11},
-  Author                   = {Jones, Harford},
+  Title                    = {An account of the transactions of {H}is {M}ajesty's {M}ission to the {C}ourt of {P}ersia, in the years 1807--11, to which is added a brief history of the {W}ahauby},
+  Author                   = {Jones-Brydges, Harford},
   Publisher                = {James Bohn},
   Year                     = {1834},
-  Volume                   = {1},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.18}
+  Address                  = {London, United Kingdom},
+  Volume                   = {1}
 }
 
 @Article{Kalkan2009,
@@ -589,13 +547,12 @@
   Pages                    = {2127--2146},
   Volume                   = {99},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1785/0120080285},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Kalkan2004,
-  Title                    = {Site-dependent spectra derived from ground motion records in Turkey},
+  Title                    = {Site-dependent spectra derived from ground motion records in {T}urkey},
   Author                   = {Kalkan, Erol and Gulkan, Polat},
   Journal                  = {Earthquake Spectra},
   Year                     = {2004},
@@ -603,8 +560,7 @@
   Pages                    = {1111--1138},
   Volume                   = {20},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.08.08}
+  Doi                      = {10.1193/1.1812555}
 }
 
 @Article{Kanamori1977,
@@ -630,9 +586,18 @@
   Pages                    = {897--911},
   Volume                   = {17},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1007/s10950-013-9360-9},
+  Publisher                = {Springer}
+}
+
+@Article{Khodaverdian_2016_BSSA,
+  Title                    = {Seismicity Parameters and Spatially Smoothed Seismicity Model for {I}ran},
+  Author                   = {Khodaverdian, A. and Zafarani, H. and Rahimian, M. and Dehnamaki, V.},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2016},
+  Pages                    = {in press},
+
+  Doi                      = {10.1785/0120150178}
 }
 
 @Unpublished{kijko2004,
@@ -746,7 +711,7 @@
 }
 
 @Article{Mirzaei1997,
-  Title                    = {A uniform catalog of earthquakes for seismic hazard assessment in Iran},
+  Title                    = {A uniform catalog of earthquakes for seismic hazard assessment in {I}ran},
   Author                   = {Mirzaei, Noorbakhsh and Gao, Meng-Tan and Chen, Yun-Tai and Wang, Jian},
   Journal                  = {Acta Seismologica Sinica},
   Year                     = {1997},
@@ -754,22 +719,20 @@
   Pages                    = {713--726},
   Volume                   = {10},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.10}
+  Doi                      = {10.1007/s11589-997-0003-5},
+  Publisher                = {Springer}
 }
 
 @Article{Mirzaei1998,
-  Title                    = {Seismic source regionalization for seismic zoning of {I}ran: major seismotectonic provinces},
+  Title                    = {Seismic source regionalization for seismic zoning of {I}ran: {M}ajor seismotectonic provinces},
   Author                   = {Mirzaei, N and Mengtan, Gao and Yuntai, Chen},
   Journal                  = {Journal of Earthquake Prediction Research},
   Year                     = {1998},
+  Number                   = {4},
   Pages                    = {465--495},
   Volume                   = {7},
 
-  Owner                    = {naeem},
-  Publisher                = {EDITORIAL DEPARTMENT, JOURNAL OF EARTHQUAKE PREDICTION RESEARCH},
-  Timestamp                = {2015.07.15}
+  Publisher                = {EDITORIAL DEPARTMENT, JOURNAL OF EARTHQUAKE PREDICTION RESEARCH}
 }
 
 @InCollection{Moinfar_2000_Chap,
@@ -788,19 +751,19 @@
 @InProceedings{Moinfar_2012_WCEE,
   Title                    = {New {I}ranian Seismic Hazard Zoning Map for New Edition Edition of Seismic Code and Its Comparison with Neighbor Countries},
   Author                   = {Moinfar, A. A. and Naderzadeh, A. and Nabavi, M. H.},
-  Booktitle                = {Proc.~World Conf.~Earthq.~Eng.},
+  Booktitle                = {Proceedings of the 15th World Conference on Earthquake Engineering},
   Year                     = {2012},
+
+  Address                  = {September 24--28, Lisbon, Portugal},
   Number                   = {1480}
 }
 
-@Article{Moinfar1994,
-  Title                    = {Historical and instrumental earthquake data collection of {I}ran},
+@TechReport{Moinfar1994,
+  Title                    = {Historical and instrumental earthquake data collection of {I}ran (in Persian)},
   Author                   = {Moinfar, A and Mahdavian, A and Maleki, E},
-  Journal                  = {Mahab Ghods Consultant Engineers, Iran (in Persian)},
+  Institution              = {Iranian Cultural Fairs Institute},
   Year                     = {1994},
-
-  Owner                    = {naeem},
-  Timestamp                = {2016.01.10}
+  Note                     = {445 pp}
 }
 
 @InProceedings{Moschetti2014,
@@ -808,10 +771,9 @@
   Author                   = {Moschetti, MP and Mueller, CS and Boyd, OS and Petersen, MD},
   Booktitle                = {10th National Conference on Earthquake Engineering},
   Year                     = {2014},
-  Organization             = {Earthquake Engineering Research Institute Anchorage, Alaska},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Address                  = {July 21--25, Anchorage, Alaska},
+  Organization             = {Earthquake Engineering Research Institute}
 }
 
 @Misc{timmurphy.org,
@@ -844,9 +806,7 @@
   Pages                    = {1249--1276},
   Volume                   = {66},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Publisher                = {Seismological Society of America}
 }
 
 @Other{Caio:2013:Online,
@@ -873,7 +833,7 @@
 
 @TechReport{Razzaghi_2012_Tech,
   Title                    = {A Preliminary Reconnaissance Report on {A}ugust 11th 2012, {V}arzaghan-{A}har Twin Earthquakes in {NW} of {I}ran},
-  Author                   = {Razzaghi, Mehran S. and Ghafory-Ash\-tia\-ny, M.},
+  Author                   = {Razzaghi, Mehran S. and Ghafory-Ashtia\-ny, M.},
   Institution              = {International Association of Seismology and Physics of the Earth's Interior, and Iranian Earthquake Engineering Association},
   Year                     = {2012}
 }
@@ -887,18 +847,17 @@
   Pages                    = {5479--5495},
   Volume                   = {90},
 
-  Owner                    = {naeem},
-  Publisher                = {Wiley Online Library},
-  Timestamp                = {2016.01.10}
+  Doi                      = {10.1029/JB090iB07p05479},
+  Publisher                = {Wiley Online Library}
 }
 
-@Article{Richter1958,
-  Title                    = {Elementary seismology..},
+@Book{Richter1958,
+  Title                    = {Elementary Seismology},
   Author                   = {Richter, Charles Francis},
+  Publisher                = {W.~H.~Freeman and Co.},
   Year                     = {1958},
 
-  Owner                    = {naeem},
-  Timestamp                = {2016.01.10}
+  Address                  = {San Francisco, United States}
 }
 
 @Article{Scherbaum2009,
@@ -916,7 +875,7 @@
 }
 
 @Article{Shahvar2013,
-  Title                    = {A unified seismic catalog for the Iranian plateau (1900--2011)},
+  Title                    = {A unified seismic catalog for the {I}ranian plateau (1900--2011)},
   Author                   = {Shahvar, Mohammad P and Zare, Mehdi and Castellaro, Silvia},
   Journal                  = {Seismological Research Letters},
   Year                     = {2013},
@@ -924,9 +883,8 @@
   Pages                    = {233--249},
   Volume                   = {84},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2016.01.10}
+  Doi                      = {10.1785/0220120144},
+  Publisher                = {Seismological Society of America}
 }
 
 @Book{Shearer2009,
@@ -940,7 +898,7 @@
 }
 
 @Article{Stocklin1968,
-  Title                    = {Structural history and tectonics of {I}ran: a review},
+  Title                    = {Structural history and tectonics of {I}ran: {A} review},
   Author                   = {Stocklin, Jovan},
   Journal                  = {AAPG Bulletin},
   Year                     = {1968},
@@ -948,9 +906,7 @@
   Pages                    = {1229--1258},
   Volume                   = {52},
 
-  Owner                    = {naeem},
-  Publisher                = {American Association of Petroleum Geologists},
-  Timestamp                = {2015.07.15}
+  Publisher                = {American Association of Petroleum Geologists}
 }
 
 @Article{Takin1972,
@@ -958,11 +914,11 @@
   Author                   = {Takin, Manoochehr},
   Journal                  = {Nature},
   Year                     = {1972},
+  Number                   = {5334},
   Pages                    = {147--150},
   Volume                   = {235},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1038/235147a0}
 }
 
 @Article{Tavakoli1999,
@@ -971,67 +927,33 @@
   Journal                  = {Annals of Geophysics},
   Year                     = {1999},
   Number                   = {6},
+  Pages                    = {1013--1021},
   Volume                   = {42},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.4401/ag-3781}
 }
 
 @Article{Trifonov1978,
   Title                    = {Late Quaternary tectonic movements of {W}estern and {C}entral {A}sia},
   Author                   = {Trifonov, Vladimir G},
-  Journal                  = {Geological society of America bulletin},
+  Journal                  = {Geological Society of America Bulletin},
   Year                     = {1978},
   Number                   = {7},
   Pages                    = {1059--1072},
   Volume                   = {89},
 
-  Owner                    = {naeem},
-  Publisher                = {Geological Society of America},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1130/0016-7606(1978)89$<$1059:LQTMOW$>$2.0.CO;2},
+  Publisher                = {Geological Society of America}
 }
 
-@Electronic{USGS_tabriz,
-  Title                    = {Significant Earthquakes of the World,2012},
-  Author                   = {USGS},
-  Note                     = {http://earthquake.usgs.gov/earthquakes/ eqarchives/ significant/sig2012.php, Accessed April 4, 2015},
-  Year                     = {2012},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.17}
-}
-
-@Article{USGS_AR,
-  Title                    = {Significant Earthquakes of the World},
-  Author                   = {USGS},
-  Year                     = {2010},
-
-  Month                    = {1},
-  Note                     = {http://earthquake.usgs.gov/earthquakes/eqarchives/significant/sig1997.php, Accessed April 4, 2010},
-
-  Organization             = {United States Geological Survey},
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.16}
-}
-
-@Electronic{USGS_ardabil,
-  Title                    = {Significant Earthquakes of the World,1997},
-  Author                   = {USGS},
-  Note                     = {http://earthquake.usgs.gov/earthquakes/ eqarchives/ significant/sig1997.php, Accessed April 4, 2015},
-  Year                     = {2010},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.17}
-}
-
-@Electronic{USGS_manjil,
-  Title                    = {M7.4 - {n}orthern {I}ran},
-  Author                   = {USGS},
-  Note                     = {http://earthquake.usgs.gov/earthquakes/ eqarchives/ significant/sig1997.php, Accessed April 4, 2015},
-  Year                     = {2010},
-
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.17}
+@Article{Uhrhammer_1986_EN,
+  Title                    = {Characteristics of northern and central California seismicity},
+  Author                   = {Uhrhammer, R. A.},
+  Journal                  = {Earthquake Notes},
+  Year                     = {1986},
+  Number                   = {1},
+  Pages                    = {21},
+  Volume                   = {57}
 }
 
 @Article{Vafaie2011,
@@ -1072,9 +994,8 @@
   Pages                    = {373--382},
   Volume                   = {72},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.16}
+  Doi                      = {10.1785/gssrl.72.3.373},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Wiemer2000,
@@ -1110,9 +1031,8 @@
   Pages                    = {1199--1228},
   Volume                   = {73},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1007/s11069-014-1151-2},
+  Publisher                = {Springer}
 }
 
 @Conference{zare2012,
@@ -1135,8 +1055,7 @@
   Pages                    = {749--772},
   Volume                   = {18},
 
-  Owner                    = {naeem},
-  Publisher                = {Springer},
-  Timestamp                = {2016.01.10}
+  Doi                      = {10.1007/s10950-014-9444-1},
+  Publisher                = {Springer}
 }
 
