--- a/seismic-catalog.tex
+++ b/seismic-catalog.tex
@@ -8,13 +8,22 @@
 
 \section{Seismic Catalog}
 
-A fundamental step in regional seismic hazard analysis is the compilation of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Instrumental data are easily accessible through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES), the Iranian Seismological Center (IRSC) at the University of Tehran, or the Iranian Strong Motion Network operated by the Building and Housing Research Center (BHRC). Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. According to \citet{Ambraseys2005}, for instance, there is evidence of earthquakes that goes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). 
+A fundamental step in regional seismic hazard analysis is the compilation of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Instrumental data are easily accessible through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES), the Iranian Seismological Center (IRSC) at the University of Tehran, or the Iranian Strong Motion Network operated by the Building and Housing Research Center (BHRC). Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
 
-Most ground motion prediction equations used today for seismic hazard assessments, however, use moment magnitude ($M_w$) instead, as it is well-known that this magnitude scale does not suffer from saturation issues as other scales, and provides a meaningful relationship with the physics of the rupture. Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013}, and \citet{Zare2014} are all compiled using magnitudes converted to $M_w$. \citet{Karimiparidari2013}, for instance, compiled a catalog for Iran and adjacent areas using international and national datasets including events up until April, 2010 with $M_w > 5$. They developed relationships between moment magnitude and other magnitude scales and removed dependent events (foreshocks and aftershocks) using the procedure by \citet{Gardner1974}. \citet{Shahvar2013} built a catalog for the Iranian plateau for events with $M_w \geq 4$ merging data from two local and seven international datasets for the 1900--2011 period. They used the orthogonal regression method by \citet{Castellaro2006} to derive magnitude conversions and removed foreshocks and aftershocks according to the procedure by \textcolor{red}{Uhrhammer (1986)}. In addition, \citet{Shahvar2013} provided a declustered version of the catalog. 
+According to \citet{Ambraseys2005}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard, however, use moment magnitude ($M_w$) instead. 
 
-In turn, the catalog by \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, and includes events from Afghanistan-Pakis\-tan, Saudi Arabia, the Caucasus, and parts of Turkey in addition to the Alborz-Azerbaijan, Zagros, Central Iran, Kopeh-Dagh and Makran seismic zones. All events in this catalog are converted to $M_w$ using relationships from previous studies \textcolor{red}{(e.g., pending ref.)}; and data were declustered using various methods including \citet{Gardner1974}, \citet{Reasenberg1985}, \textcolor{red}{Uhrhammer (1986), and Gruenthal (????) [is this level of detail really necessary?]}. In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found the methods to yield consistent results. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
+Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013}, and \citet{Zare2014} are all compiled using magnitudes converted to $M_w$. \citet{Karimiparidari2013}, for instance, compiled a catalog for Iran and adjacent areas using international and national datasets including events up until April, 2010 with $M_w > 5$. They developed relationships between moment magnitude and other magnitude scales and removed foreshocks and aftershocks using the procedure by \citet{Gardner1974}. \citet{Shahvar2013} built a catalog for the Iranian plateau for events with $M_w \geq 4$ merging data from two local and seven international datasets for the 1900--2011 period. They used the orthogonal regression method by \citet{Castellaro2006} to derive magnitude conversions and removed foreshocks and aftershocks according to the procedure by \citet{Uhrhammer_1986_EN}. In addition, \citet{Shahvar2013} provided a declustered version of the catalog. 
+
+In turn, the catalog by \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, including events from Afghanistan, Pakis\-tan, Saudi Arabia, the Caucasus and parts of Turkey, in addition to the Alborz-Azerbaijan, Zagros, central Iran, Kopeh-Dagh and Makran seismic zones. All events in this catalog are converted to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}; and declustered using various methods \citep{Gardner1974, Reasenberg1985, Uhrhammer_1986_EN}. In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found these methods to yield consistent results. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
 
 In this study we adopt the catalog compiled by \citet{Zare2014} for both historical and instrumental earthquakes. This catalog includes events of magnitude $M_w \geq 4$ from 550 A.d.~to December 1999. We complemented it with events $M \geq 3$ occurred between January 2000 and December 2015 obtained from the IIEES database. Our analysis of this dataset indicated that the catalog satisfies completeness from 2005 onward. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. 
+
+
+
+
+
+
+
 % The result of our compilation is shown in Fig.~\ref{fig:catalog}, which includes maps for historical and instrumental seismicity. 
 % The following sections provide additional details about magnitude conversion and de\-clustering of the events in our combined catalog.
 
